--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,3 +5,4 @@ Pre.2 Manual renaming with Shift+F10+M
 Pre.3 Manual renaming with F2
 
 Ver.0 A one-line batch script
+Ver.1 An imporoved batch script
