--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,3 +6,4 @@ Pre.3 Manual renaming with F2
 
 Ver.0 A one-line batch script
 Ver.1 An imporoved batch script
+Ver.3 Generates a batch script with VBScript
