--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,3 +7,4 @@ Pre.3 Manual renaming with F2
 Ver.0 A one-line batch script
 Ver.1 An imporoved batch script
 Ver.3 Generates a batch script with VBScript
+Ver.4 Automatically removes given keywords
