--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,3 +9,4 @@ Ver.1 An imporoved batch script
 Ver.3 Generates a batch script with VBScript
 Ver.4 Automatically removes given keywords
 Ver.5 Write replaced results back into CSV file
+Ver.6 Abandon batch script and rename directly by VBScript
