--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,3 +3,5 @@ Developing History
 Pre.1 Manual renaming with context menu and mouse
 Pre.2 Manual renaming with Shift+F10+M
 Pre.3 Manual renaming with F2
+
+Ver.0 A one-line batch script
